# WorkShopGameDev

./: CMakeLists.txt  README.md  WorkShopGameDev.cpp  WorkShopGameDev.h
shaders/: frag.glsl
src/Circle/: Shader.hpp  main.cpp
src/ImguiInit/: main.cpp
src/Input/: main.cpp
src/OpenglInit/: main.cpp
src/Setup/: main.cpp
src/Triangle/: main.cpp
src/Window/: main.cpp
